--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^7.9.8",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/csurf": "^1.11.0",
     "apollo-server-express": "^2.19.2",
     "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "firebase-admin": "^9.5.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.2",
+    "helmet": "^4.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
